# higra-pump-engine

./: CLAUDE.md
backend/: pyproject.toml
backend/src/hpe/: cli.py
backend/src/hpe/ai/anomaly/: validators.py
backend/src/hpe/ai/assistant/: interpreter.py  offline_rules.py  rag.py
backend/src/hpe/ai/pinn/: model.py
backend/src/hpe/ai/surrogate/: eta_predictor.py  evaluator.py  model.py  v1_xgboost.py  v2_gp.py
backend/src/hpe/ai/training/: experiment.py  trainer.py
backend/src/hpe/api/: app.py  auth.py  volute_endpoint.py  websocket.py
backend/src/hpe/cfd/: adjoint_loop.py  design_loop.py  doe.py  doe_runner.py  domain_extent.py  pipeline.py  pump_curve.py  sweep.py
backend/src/hpe/cli/: advanced_commands.py
backend/src/hpe/core/: db_models.py  design_engine.py  design_state.py  enums.py  logging_config.py  persistence.py  udp.py
backend/src/hpe/data/: bancada_etl.py  feature_store.py  ingest.py
backend/src/hpe/db/: connection.py  repositories.py
backend/src/hpe/geometry/: backend.py  export.py  models.py  parametric.py
backend/src/hpe/infra/: devops_tools.py
backend/src/hpe/io/: ptd_reader.py  td1_perfdata.py
backend/src/hpe/optimization/: advanced_methods.py  doe.py  enhancements.py  nsga2.py  rrs.py  surrogate_opt.py
backend/src/hpe/orchestrator/: tasks.py  versions.py
backend/src/hpe/physics/: blockage_tables.py  curves.py  diffusion.py  euler.py  fluid_properties.py  noise_prediction.py  stability.py
backend/src/hpe/pipeline/: cfd_pipeline.py
backend/src/hpe/postprocess/: openfoam_parser.py
backend/src/hpe/reports/: generator.py
backend/src/hpe/sizing/: axial.py  axial_fan.py  cavitation.py  design_db.py  design_templates.py  efficiency.py  francis.py  impeller_sizing.py  meanline.py  multistage.py  radial_inflow_turbine.py  sirocco_fan.py
backend/src/hpe/validation/: benchmarks.py
backend/tests/: test_api.py  test_geometry.py  test_integration.py  test_sizing.py
backend/tests/ai/: test_assistant.py
backend/tests/api/: test_endpoints.py  test_geometry_modes.py
backend/tests/cfd/: test_case_builder.py  test_mesh.py  test_mesh_strategy.py
backend/tests/core/: test_design_engine.py  test_design_state.py
backend/tests/data/: test_ingest.py
backend/tests/e2e/: test_api_e2e.py
backend/tests/geometry/: test_backends.py  test_blade.py  test_blockage.py  test_distributor.py  test_double_volute.py  test_impeller.py  test_implicit.py  test_inverse.py  test_lete.py  test_meridional.py  test_stacking.py  test_volute.py
backend/tests/optimization/: test_bayesian.py
backend/tests/physics/: test_advanced_losses.py  test_compressible.py  test_curves.py  test_stability.py  test_stress.py
backend/tests/pipeline/: test_cfd_pipeline.py
backend/tests/postprocess/: test_parser.py
backend/tests/sizing/: test_blade_count.py  test_design_db.py  test_francis.py  test_impeller_sizing.py  test_meanline.py  test_specific_speed.py  test_velocity_triangles.py
backend/tests/validation/: test_benchmark.py
(+86 files in other folders)
